test/tools/javac/typeAnnotations/failures/target/Constructor.out
Constructor.java:14:3: compiler.err.annotation.type.not.applicable
Constructor.java:17:3: compiler.err.annotation.type.not.applicable
Constructor.java:23:15: compiler.err.annotation.type.not.applicable
3 errors